--- a/hdns.cabal
+++ b/hdns.cabal
@@ -18,8 +18,12 @@ library
   exposed-modules:     Lib
   build-depends:       base >= 4.7 && < 5
                      , binary-strict
+                     , binary
                      , bytestring
-                     , containers
+                     , unordered-containers
+                     , stm
+                     , network >= 2.6
+                     , mtl
   default-language:    Haskell2010
 
 executable hdns-exe
