--- a/hdns.cabal
+++ b/hdns.cabal
@@ -1,14 +1,14 @@
 name:                hdns
 version:             0.1.0.0
--- synopsis:
+synopsis:            Learning Haskell with a DNS thingy
 -- description:
-homepage:            https://github.com/githubuser/hdns#readme
-license:             BSD3
+homepage:            https://github.com/ibawt/hdns#readme
+license:             GPL-3
 license-file:        LICENSE
-author:              Author name here
-maintainer:          example@example.com
-copyright:           2017 Author name here
-category:            Web
+author:              Ian Quick
+maintainer:          ian.quick@gmail.com
+copyright:           2017 Ian Quick
+category:            Network
 build-type:          Simple
 extra-source-files:  README.md
 cabal-version:       >=1.10
@@ -40,9 +40,11 @@ test-suite hdns-test
   main-is:             Spec.hs
   build-depends:       base
                      , hdns
+                     , bytestring
+                     , hspec
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
 source-repository head
   type:     git
-  location: https://github.com/githubuser/hdns
+  location: https://github.com/ibawt/hdns
